# pacelab

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: methodology.md
pacelab/: __init__.py  circuits.py  config.py  data.py  schema.py
pacelab/api/: __init__.py  app.py
pacelab/cli/: __init__.py
pacelab/ingest/: __init__.py  telemetry.py
pacelab/metrics/: __init__.py  bayes.py  career.py  consistency.py  leaderboards.py  qualifying.py  race_pace.py  recovery.py  stats.py  style.py  teammate.py  teammates_h2h.py  track_type.py  validity.py  weather.py
scripts/: dev.sh  pull-data-from-vm.sh
tests/: test_schema.py  test_stats.py  test_validity.py
web/: next.config.mjs  package.json
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/src/app/alltime/: page.tsx
web/src/app/bayes/: page.tsx
web/src/app/car-pace/: page.tsx
web/src/app/careers/[code]/: page.tsx
web/src/app/compare/[season]/[pair]/: page.tsx
web/src/app/drivers/[season]/[code]/: page.tsx
web/src/app/methodology/: page.tsx
web/src/app/seasons/[season]/: page.tsx
web/src/lib/: api.ts  format.ts
