[project]
name = "pacelab"
version = "0.1.0"
description = "Evidence-based driver scouting reports for Formula 1."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "iris-builds-things", email = "iris@clauseo.chat" }]
keywords = ["formula1", "f1", "fastf1", "motorsport", "analytics", "bayesian"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "fastf1>=3.8,<4",
    "polars>=1.30,<2",
    "duckdb>=1.4,<2",
    "pyarrow>=18,<25",
    "numpy>=2.0,<3",
    "scipy>=1.14,<2",
    "pandas>=2.2,<3",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "pydantic>=2.9,<3",
    "click>=8.1,<9",
    "rich>=13.9,<15",
    "platformdirs>=4.3,<5",
    "tenacity>=9.0,<10",
    "python-dateutil>=2.9,<3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7,<1",
    "mypy>=1.13,<2",
    "pytest>=8.3,<9",
    "pytest-cov>=6.0,<7",
    "ipython>=8.29,<10",
]
bayes = [
    "numpyro>=0.18,<1",
    "jax[cpu]>=0.4.35,<1",
    "arviz>=0.20,<1",
]

[project.scripts]
pacelab = "pacelab.cli:main"

[project.urls]
"Homepage" = "https://github.com/bb-deeplearning/pacelab"
"Repository" = "https://github.com/bb-deeplearning/pacelab"
"Issues" = "https://github.com/bb-deeplearning/pacelab/issues"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pacelab"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "notebooks", "web", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4", "PIE", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = ["data", "notebooks", "web", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
